--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-31  Peter O'Gorman  <peter@pogma.com>
+
+	* m4/libtool.m4, ltmain.in (darwin): Support IBM's xlc and xlc++.
+
 2004-03-31  Gary V. Vaughan  <gary@gnu.org>
 
 	* m4/libtool.m4 (_LT_LANG_C_CONFIG): If $compiler is not set, then
