--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-10  Peter Breitenlohner <peb@mppmu.mpg.de>
+	
+	* libltdl/Makefile.am (local-install-files): remove $srcdir from
+	file names, they may have been placed there by automake-1.8.
+	
 2004-04-08  Fredrik Estreen  <estreen@algonet.se>
 
 	* ltdl.m4: Rename shrext to shrext_cmds here too.
