* configure.ac: Bumped version to 1.5.7a. * NEWS: updated.
Released 1.5.6

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.5.7a: 2004-??-??; CVS version 1.5.7a, Libtool team:
+* Bug Fixes.
+
 New in 1.5.6: 2004-04-11; CVS version 1.5.5a, Libtool team:
 * Installs libltdl files properly in $prefix/share/libtool/libltdl. 1.5.4
   did not install them at all.
