--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-11  Peter O'Gorman  <peter@pogma.com>
 
+	* configure.ac: Bumped version to 1.5.7a.
+	* NEWS: updated.
+
+	Released 1.5.6
+	
 	* configure.ac: Bumped version to 1.5.6.
 	* NEWS: updated.
 
