--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-13  Scott James Remnant  <scott@netsplit.com>
+
+	* Makefile.am (XDELTA_OPTIONS): Remove --pristine as that
+	generates huge xdeltas.
+
 2004-04-11  Peter O'Gorman  <peter@pogma.com>
 
 	* configure.ac: Bumped version to 1.5.7a.
