--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-19  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* doc/libtool.texi (LT_INIT): Properly display options in a table.
+
 2004-04-19  Gary V. Vaughan  <gary@gnu.org>
 
 	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG): Intel C++ compiler 8.0 and
