--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2004-04-19  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* m4/libtool.m4: Use cc rather than ld to created
+	a shared library on Tru64 UNIX.
+
+	* m4/libtool.m4: Use cc rather than ld to created
 	a shared library on IRIX.
 
 	* libltdl/loader-shl_load.c: Fix typos during reorg.
