--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-04-19  Albert Chin-A-Young  <china@thewrittenword.com>
 
+	* m4/libtool.m4: Use cc rather than ld to created
+	a shared library on HP-UX 11.x. On HP-UX 10.x, the
+	C compiler doesn't grok -b so we continue to use ld.
+
 	* m4/libtool.m4: Use cc rather than ld to create a
 	shared library on Solaris. When using the Sun
 	Workshop compiler 5.0 (and I presume any previous
